--- a/app/views/jobs/edit.html.haml
+++ b/app/views/jobs/edit.html.haml
@@ -1,7 +1,10 @@
-%h1 Editing job
+.pull-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, @job, method: :delete, data: { confirm: "Are you sure you want to DELETE this job?\n (#{@job.ref})" }, :title => "Destroy" if is_admin?
+
+= link_to '<< Index', jobs_path
+
+
+%h1
+	Editing Job
+	= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, @job, html = {:title => "Show Job"}
 
 = render 'form'
-
-= link_to 'Show', @job
-|
-= link_to 'Index', jobs_path
