--- a/app/views/template_tasks/edit.html.haml
+++ b/app/views/template_tasks/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Editing Task Template
+.pull-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, @template_task, method: :delete, data: { confirm: "Are you sure you want to DELETE this task template?\n (#{@template_task.title})" }, :title => "Destroy" if is_admin?
+
+= link_to '<< Index', template_tasks_path
+
+%h1
+	Editing Task Template
+	= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, @template_task, :title => "Show Template Task"
 
 = render 'form'
-
-= link_to 'Show', @template_task
-|
-= link_to 'Index', template_tasks_path
