--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -8,3 +8,5 @@ ul { list-style-type: none; }
 
 .list-group-item.yellow { background: yellow; }
 .list-group-item.white { background: white; }
+
+.form-horizontal { padding-left:20px; padding-right:20px; }
