--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,8 @@
 
 		= render "layouts/header"
 		.container
-			-# flash.each do |key, value|
-				-#.alert{ :class => "alert-#{ key }" }= value
-			= yield
+			#content
+				-# flash.each do |key, value|
+					-#.alert{ :class => "alert-#{ key }" }= value
+				= yield
 		= debug(params) if Rails.env.development?
