--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,10 +1,10 @@
 %p#notice= notice
 
-= link_to '<< Index', notes_path
-
 %h1
 	= link_to @note.job.ref, job_path(@note.job) if @note.job
 	= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_note_path(@note), html = {:title => "Edit Note"}
+
+= link_to '<< All Notes', notes_path
 
 %h2= @note.title
 
