--- a/app/views/shared/_tasklist.html.haml
+++ b/app/views/shared/_tasklist.html.haml
@@ -1,5 +1,5 @@
 - if tasklist.any?
-	.pull-right.task-list
+	.task-list
 		-#list-group
 		%ul{ :style => "padding-left:0px;" }
 			/ Float right stuff
