--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -3,51 +3,28 @@
 
 %h1 Task List
 
-%table.table
-	%thead
-		%tr
-			%th 
-			%th Title
-			%th Text
-			%th Complete A
-			%th Complete B
-			%th Complete Date
-			%th Tentative Due
-			%th Due Date
-			%th
-			%th
-			%th
+%ul
+	- @jobs.each do |job|
+		%li.success
+			%div{ :"data-toggle" => "collapse", :"data-target" => "#tasks#{job.id}", :style => "cursor:pointer;" }
+				= link_to( job.reference + " " + job.title, job)
 
-	%tbody
-		- current_job = nil
-		- @tasks.each do |task|
-			- if current_job != task.job
-				- current_job = task.job
-				%tr.success
-					%td{ :colspan => 11 }= link_to( task.job.reference + " " + task.job.title, task.job) if task.job
-			%tr{ :class => "#{'financial' if task.is_financial}" }
-				%td= task.sort_order
-				%td= task.title
-				%td= task.text
-				%td
-					- if !task.party_a_complete_date.blank?
-						= task.party_a_complete_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.party_a_complete_date.year}")
-				%td
-					- if !task.party_b_complete_date.blank?
-						= task.party_b_complete_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.party_b_complete_date.year}")
-				%td
-					- if !task.complete_date.blank?
-						= task.complete_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.complete_date.year}")
-				%td
-					- if !task.tentative_due_date.blank?
-						= task.tentative_due_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.tentative_due_date.year}")
-				%td
-					- if !task.due_date.blank?
-						= task.due_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.due_date.year}")
-				%td
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, task, html = {:title => "Show"}
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_task_path(task), html = {:title => "Edit"}
-				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, task, method: :delete, data: { confirm: 'Are you sure you want to delete this task?' }, :title => "Destroy"
-
-
--#= link_to 'New Task', new_task_path
+			%ul{ :id => "tasks#{job.id}", :style => "height:0px;", :class => "collapse" }
+				- job.tasks.order("sort_order ASC").each do |task|
+					%li{ :class => "#{'financial' if task.is_financial}" }
+						= task.sort_order
+						= task.title
+						= task.text
+						- if !task.party_a_complete_date.blank?
+							= task.party_a_complete_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.party_a_complete_date.year}")
+						- if !task.party_b_complete_date.blank?
+							= task.party_b_complete_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.party_b_complete_date.year}")
+						- if !task.complete_date.blank?
+							= task.complete_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.complete_date.year}")
+						- if !task.tentative_due_date.blank?
+							= task.tentative_due_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.tentative_due_date.year}")
+						- if !task.due_date.blank?
+							= task.due_date.strftime("%a, %e %b #{'%y' if DateTime.now.year != task.due_date.year}")
+						= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, task, html = {:title => "Show"}
+						= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_task_path(task), html = {:title => "Edit"}
+						%div.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, task, method: :delete, data: { confirm: 'Are you sure you want to delete this task?' }, :title => "Destroy"
